tests/specs/private_type_class_property.txt
# mod.ts
export type PrivatePropThroughNamespaceRef = typeof MyNamespace.Export.someProp;

namespace MyNamespace {
  export import Export = MyNamespace2.MyClass;
}

namespace MyNamespace2 {
  export import MyClass = MyNamespace3.MyClass;
}

namespace MyNamespace3 {
  export class MyClass {
    static someProp: string;
  }
}

# diagnostics
error[private-type-ref]: public type 'PrivatePropThroughNamespaceRef' references private type 'MyNamespace'
 --> /mod.ts:1:1
  | 
1 | export type PrivatePropThroughNamespaceRef = typeof MyNamespace.Export.someProp;
  | ^
  = hint: make the referenced type public or remove the reference
  | 
3 | namespace MyNamespace {
  | - this is the referenced type
  | 

  info: to ensure documentation is complete all types that are exposed in the public API must be public


error[private-type-ref]: public type 'PrivatePropThroughNamespaceRef' references private type 'MyNamespace.Export'
 --> /mod.ts:1:1
  | 
1 | export type PrivatePropThroughNamespaceRef = typeof MyNamespace.Export.someProp;
  | ^
  = hint: make the referenced type public or remove the reference
  | 
4 |   export import Export = MyNamespace2.MyClass;
  |   - this is the referenced type
  | 

  info: to ensure documentation is complete all types that are exposed in the public API must be public


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type PrivatePropThroughNamespaceRef = typeof MyNamespace.Export.someProp;
  | ^

# output.txt
Defined in file:///mod.ts:1:1

type PrivatePropThroughNamespaceRef = typeof MyNamespace.Export.someProp

Defined in file:///mod.ts:3:1

private namespace MyNamespace



# output.json
[
  {
    "name": "PrivatePropThroughNamespaceRef",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "kind": "typeAlias",
    "typeAliasDef": {
      "tsType": {
        "repr": "MyNamespace.Export.someProp",
        "kind": "typeQuery",
        "typeQuery": "MyNamespace.Export.someProp"
      },
      "typeParams": []
    }
  },
  {
    "name": "MyNamespace",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 3,
      "col": 0,
      "byteIndex": 82
    },
    "declarationKind": "private",
    "kind": "namespace",
    "namespaceDef": {
      "elements": []
    }
  }
]
